Fix tabbar hidding when keyboard is visible

--- a/src/app/pages/tabs/tabs.page.scss
+++ b/src/app/pages/tabs/tabs.page.scss
@@ -28,8 +28,7 @@
 
 .keyboard-open :host {
   /deep/ion-tabbar {
-    margin-bottom: -55px;
-    border-top: none;
+    margin-bottom: -60px;
   }
 }
 
